Fix: Adjust z-index for proper layering in NewResume

--- a/apps/client/src/components/new-resume/NewResume.module.scss
+++ b/apps/client/src/components/new-resume/NewResume.module.scss
@@ -14,7 +14,7 @@
         position: sticky;
         top: 0;
         background-color: #fff;
-        z-index: 1;
+        z-index: 2 ;
     }
 
     footer{
@@ -29,6 +29,6 @@
     }
 
     & label{
-        z-index: -1;
+        z-index: 1;
     }
 }
